fix pause button alignment

--- a/controls.css
+++ b/controls.css
@@ -105,7 +105,7 @@
 }
 
 .slant.controls ul li.playpause a.pause {
-  text-align: right;
+  left: 2%;
 }
 
 .slant.controls ul li.playpause a.replay {
